// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VIcon for component icon should render an svg icon 1`] = `
<span class="v-icon notranslate theme--light"
      aria-hidden="true"
>
  <svg class="v-icon__svg"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 24 24"
       role="img"
       aria-hidden="true"
  >
    <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z">
    </path>
  </svg>
</span>
`;

exports[`VIcon for component icon should render an svg icon 2`] = `
<span class="v-icon notranslate theme--light"
      aria-hidden="true"
      style="font-size: 36px; height: 36px; width: 36px;"
>
  <svg class="v-icon__svg"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 24 24"
       role="img"
       aria-hidden="true"
       style="font-size: 36px; height: 36px; width: 36px;"
  >
    <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z">
    </path>
  </svg>
</span>
`;

exports[`VIcon for component icon should render component 1`] = `
<span class="v-icon notranslate theme--light"
      aria-hidden="true"
>
</span>
`;

exports[`VIcon set font size from helper prop 1`] = `
<i class="v-icon notranslate theme--light material-icons"
   aria-hidden="true"
   style="font-size: 16px;"
>
</i>
`;

exports[`VIcon set font size from helper prop 2`] = `
<i class="v-icon notranslate theme--light material-icons"
   aria-hidden="true"
   medium="true"
>
</i>
`;

exports[`VIcon set font size from helper prop 3`] = `
<i class="v-icon notranslate theme--light material-icons"
   aria-hidden="true"
   style="font-size: 36px;"
>
</i>
`;

exports[`VIcon set font size from helper prop 4`] = `
<i class="v-icon notranslate theme--light material-icons"
   aria-hidden="true"
   style="font-size: 40px;"
>
</i>
`;
